src/objects/OAuth_Token__c.object
<CustomObject>
    <description>This object will store the access token for GoToTraining API for users.</description>
    <fields>
        <fullName>Account_Key__c</fullName>
        <label>Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expires_In__c</fullName>
        <label>Expires In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizer_Key__c</fullName>
        <label>Organizer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OAuth_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OAuth Token</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organizer_Key__c</columns>
        <columns>Owner__c</columns>
        <columns>Token__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>OAuth Token No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAuth Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>